--- a/the_rick_and_morty/pubspec.yaml
+++ b/the_rick_and_morty/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   dartz: ^0.10.1
+  http: ^0.13.5
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
