--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   dartz: ^0.10.1
   http: ^0.13.5
   shared_preferences: ^2.0.18
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
