--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.18
   internet_connection_checker: ^1.0.0+1
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
