--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  equatable: ^2.0.5
   dartz: ^0.10.1
-  http: ^0.13.5
+
+  # Value equality
+  equatable: ^2.0.5
+  
+  # Local cache
   shared_preferences: ^2.0.18
+
+  # Remote API
+  http: ^0.13.5
   internet_connection_checker: ^1.0.0+1
+
+  # Bloc / Cubit for state management
   flutter_bloc: ^8.1.2
+
+  # Dependency Injection
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
