--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   
   # Local cache
   shared_preferences: ^2.0.18
+  cached_network_image: ^3.2.3
 
   # Remote API
   http: ^0.13.5
@@ -54,6 +55,9 @@ dependencies:
 
   # Dependency Injection
   get_it: ^7.2.0
+
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -78,8 +82,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/noimage.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
